Update .gitignore to exclude build artifacts
Added specific HydraServer build output files and directories to .gitignore to prevent committing generated binaries and intermediate files.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 bin/
 obj/
 publish/
+obj/Debug/net8.0-windows/refint/HydraServer.dll
+obj/Debug/net8.0-windows/ref/HydraServer.dll
+obj/Debug/net8.0-windows/HydraServer.sourcelink.json
+obj/Debug/net8.0-windows/HydraServer.pdb
+obj/Debug/net8.0-windows/HydraServer.genruntimeconfig.cache
+obj/Debug/net8.0-windows/HydraServer.dll
+obj/Debug/net8.0-windows/HydraServer.AssemblyInfoInputs.cache
+obj/Debug/net8.0-windows/HydraServer.AssemblyInfo.cs
