Update .gitignore to exclude additional build files
Added HydraServer.sourcelink.json and the /obj directory to .gitignore to prevent build artifacts from being tracked in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ obj/Debug/net8.0-windows/HydraServer.genruntimeconfig.cache
 obj/Debug/net8.0-windows/HydraServer.dll
 obj/Debug/net8.0-windows/HydraServer.AssemblyInfoInputs.cache
 obj/Debug/net8.0-windows/HydraServer.AssemblyInfo.cs
+obj/Debug/net8.0-windows/HydraServer.sourcelink.json
+/obj
